[build-system]
requires = ["setuptools>=50.3.2", "wheel", "setuptools-declarative-requirements"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
py36 = true

include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.vscode
  | src/*\.egg-info
  | build
  | dist
  | __pycache__
)/
'''
